src/test/deca/syntax/valid/expr_or_chain.deca

{
   if(true || false || true || false){
    println("ok");
   }
}
