src/test/deca/syntax/invalid/provided/print_avec_3_gui.deca
//syntaxe marche pas
{print("va"pas"marcher");}